# cloud-storage

./: .gitignore  README.md  app.py  db.sqlite  helpers.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt
cloud_storage/: __init__.py  auth.py  util.py  views.py
cloud_storage/common/: __init__.py  database.py  file_handler.py  filters.py  helpers.py  storage_handler.py
cloud_storage/database/: __init__.py  database.py  exceptions.py  schema.sql
cloud_storage/static/: styles.css
cloud_storage/storage/: __init__.py  database.py  exceptions.py  file_handler.py  storage_handler.py  strategies.py
cloud_storage/templates/: index.html  layout.html  login.html  search.html  signup.html
cloud_storage/templates/components/: footer.html  navbar.html  toolbox.html
cloud_storage/templates/views/: index.html  upload_file.html
static/: about.md  styles.css
tests/: conftest.py  test_database.py  test_file_handler.py  test_filters.py  test_helpers.py
